# popular-repos

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  dump.rdb  external_repos.py  internal_repos.py  popular_repos.py  pyproject.toml  requirements.txt
.github/workflows/: pyci.yml
popular_repos/: adapted_repos.py  github_api.py  resources.py  server.py
tests/: test_app.py  test_func.py
tests/fixtures/: modified_repos.json  repos.json
